Lauro Lins and Sostene Lins as authors

--- a/main.tex
+++ b/main.tex
@@ -121,16 +121,10 @@
 \vspace{1.4cm}
 {\large by} \\
 \vspace{1.4cm}
-{\large Lauro Didier Lins}
+{\large Lauro Didier Lins \,\, and \,\, S\'ostenes Lins}
 
-\vspace{5cm}
-A thesis presented to the Universidade Federal de Pernambuco \linebreak
-in partial fulfillment of the requirements for the 
-degree of \linebreak Doutor em \textsc{Matemática Computacional}
-
-\vspace{4.5cm}
-Recife, January, 2007
-
+\vspace{1.4cm}
+April, 2013
 \end{large}
 \end{center}
 \vfill
@@ -139,17 +133,17 @@ Recife, January, 2007
 % Comente para ocultar
 %\presentationpage
 
-% Dedicatória
-% Comente para ocultar
-\begin{dedicatory}
-to  Sofia
-%<DIGITE A DEDICATÒRIA AQUI>
-\end{dedicatory}
+%% % Dedicatória
+%% % Comente para ocultar
+%% \begin{dedicatory}
+%% to  Sofia
+%% %<DIGITE A DEDICATÒRIA AQUI>
+%% \end{dedicatory}
 
-% Agradecimentos
-% Se preferir, crie um arquivo à parte e o inclua via \include{}
-%\acknowledgements <DIGITE OS AGRADECIMENTOS AQUI>
-\include{acknowledgements}
+%% % Agradecimentos
+%% % Se preferir, crie um arquivo à parte e o inclua via \include{}
+%% %\acknowledgements <DIGITE OS AGRADECIMENTOS AQUI>
+%% \include{acknowledgements}
 
 % Epígrafe
 % Comente para ocultar
@@ -169,11 +163,11 @@ to  Sofia
 %\resumo <DIGITE O RESUMO AQUI>
 
 
-%% Palavras-chave do resumo em Português
-\include{resumo}
-%\begin{keywords}
-%<DIGITE AS PALAVRAS-CHAVE AQUI>
-%\end{keywords}
+%% %% Palavras-chave do resumo em Português
+%% \include{resumo}
+%% %\begin{keywords}
+%% %<DIGITE AS PALAVRAS-CHAVE AQUI>
+%% %\end{keywords}
 
 % Resumo em Inglês
 % Se preferir, crie um arquivo à parte e o inclua via \include{}
