More on the TODO

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
-- Remove the "first person" from introduction
+- Remove first person usage from introduction
 
-- Fix page size: not vertically centered and ugly specially with the
+- Remove use of the term thesis
+
+- Fix page size: not vertically centered and ugly, specially the
   catalogues in the end of the paper
-
