Added Makefile and autor is Lauro Lins

--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,7 @@
 \vspace{1.4cm}
 {\large by} \\
 \vspace{1.4cm}
-{\large Lauro Didier Lins \,\, and \,\, S\'ostenes Lins}
+{\large Lauro Lins \,\, and \,\, S\'ostenes Lins}
 
 \vspace{1.4cm}
 April, 2013
