Changed title and style of references; also added .gitignore;v_2

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,8 @@
 
 % Título da dissertação/tese
 % e.g. \title{Sobre a conjectura $P=NP$}
-\title{\textsc{Blink}: a language to view, recognize, \\ classify and manipulate 3D-spaces}
+%\title{\textsc{Blink}: a language to view, recognize, \\ classify and manipulate 3D-spaces}
+\title{\textsc{All Shapes of Spaces}: a census of small 3-manifolds}
 
 % Data da defesa
 % e.g. \date{19 de fevereiro de 2003}
@@ -117,7 +118,8 @@
 \begin{large}
 %\title
 
-{\Large \textsc{Blink}: a language to view, recognize, \linebreak classify and manipulate 3D-spaces} \\
+%{\Large \textsc{Blink}: a language to view, recognize, \linebreak classify and manipulate 3D-spaces} \\
+{\Large \textsc{All Shapes of Spaces}: a census of small 3-manifolds} \\
 \vspace{1.4cm}
 {\large by} \\
 \vspace{1.4cm}
@@ -230,7 +232,8 @@ April, 2013
 % BibTeXpress em www.cin.ufpe.br/~paguso/bibtexpress
 \setlength{\topmargin}{0cm}
 \nocite{*}
-\bibliographystyle{alpha}
+%\bibliographystyle{alpha}
+\bibliographystyle{plain}
 \bibliography{references}
 
 % Cólofon
