--- a/chapter5.tex
+++ b/chapter5.tex
@@ -128,7 +128,7 @@ and (4) \textsc{Filtering}.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/unavoidablesetpipeline.eps}
+      \includegraphics[width=12cm]{A.figs/unavoidablesetpipeline.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Pipeline of the \kpu set generation for $k=4$}
@@ -156,7 +156,7 @@ have breakpairs.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/blockgeneration.eps}
+      \includegraphics[width=12cm]{A.figs/blockgeneration.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Block generation}
@@ -211,7 +211,7 @@ g-blink with fewer g-edges.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/unnecessarygblinkstructure.eps}
+      \includegraphics[width=12cm]{A.figs/unnecessarygblinkstructure.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Structures to identify g-blinks that may be discarded}
@@ -364,7 +364,7 @@ these 3 cases.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=15cm]{fig/qifailure.eps}
+      \includegraphics[width=15cm]{A.figs/qifailure.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ The 3 cases in $U$ where HG helped QI to distinguish spaces}
@@ -527,7 +527,7 @@ HGnQI classes we could not find a single connected component.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=15cm]{fig/subgraphs.eps}
+      \includegraphics[width=15cm]{A.figs/subgraphs.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Graphs of g-blinks (red nodes) and gems (yellow nodes). The first two are trees
@@ -548,7 +548,7 @@ different 3-gems were generated before all g-blinks were connected.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=16cm]{fig/doubts.eps}
+      \includegraphics[width=16cm]{A.figs/doubts.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ The only 2 classes with same HGnQI where a proof of the homeomorphism was not found}
@@ -631,7 +631,7 @@ classes that we do not know whether they induce a single space or two spaces are
 \begin{figure}[h!tp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=16cm]{fig/compositespaces.eps}
+      \includegraphics[width=16cm]{A.figs/compositespaces.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ The 14 composite spaces in $U$}
@@ -660,7 +660,7 @@ to 6.18, but we do not do this.
 \begin{figure}[h!tp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=14cm]{fig/gblinksfors1xs2inu.eps}
+      \includegraphics[width=14cm]{A.figs/gblinksfors1xs2inu.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Blink and BFL presentations for g-blinks in 6.5: space $\IS^2 \times \IS^1$}
@@ -695,8 +695,8 @@ that there are only 487 (with 2 doubts) is in the program \textsc{Blink}.
 \begin{figure}[h!tp]
    \begin{center}
       \leavevmode
-      %\includegraphics[width=14.5cm]{fig/primeSpace487Representants.eps}
-      \includegraphics[width=15cm]{fig/primespace487representants.eps}
+      %\includegraphics[width=14.5cm]{A.figs/primeSpace487Representants.eps}
+      \includegraphics[width=15cm]{A.figs/primespace487representants.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ List of 487 blinks that induce once any prime space (modulo orientation)
@@ -709,7 +709,7 @@ that there are only 487 (with 2 doubts) is in the program \textsc{Blink}.
 \begin{figure}[h!tp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=15cm]{fig/primespace487representantlinks.eps}
+      \includegraphics[width=15cm]{A.figs/primespace487representantlinks.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ List of 487 BFLs that induce once any prime space (modulo orientation)
@@ -754,7 +754,7 @@ might mean something on spaces.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics{fig/nontrivialgreenblocks.eps}
+      \includegraphics{A.figs/nontrivialgreenblocks.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Non-trivial pair of green blocks (2-connected blinks) inducing the same space}
@@ -805,7 +805,7 @@ are shown in Figure~\ref{fig:doubts3ConnectedIsolated}.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics{fig/doubts3connectedisolated.eps}
+      \includegraphics{A.figs/doubts3connectedisolated.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Doubts on simple 3-connected all green blinks}
