--- a/appendix2.tex
+++ b/appendix2.tex
@@ -22,7 +22,7 @@ Appendix~\ref{chap:primeCatalogue}.
    \hspace{-1.8cm}
    \enlargethispage{5cm}
    {\centering
-   \includegraphics[width=18cm]{fig/compcatalog\ifnum\ii<100 0\fi\ifnum\ii<10 0\fi\number\ii.eps}
+   \includegraphics[width=18cm]{A.figs/compcatalog\ifnum\ii<100 0\fi\ifnum\ii<10 0\fi\number\ii.eps}
    }
    \newpage}
       \advance\ii by 1
