--- a/chapter2.tex
+++ b/chapter2.tex
@@ -22,9 +22,9 @@ in this work.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=5cm]{fig/sevenbridges.eps}
+      \includegraphics[width=5cm]{A.figs/sevenbridges.eps}
       \hspace{1cm}
-      \includegraphics[width=5cm]{fig/sevenbridgeswrongwalk.eps} \\
+      \includegraphics[width=5cm]{A.figs/sevenbridgeswrongwalk.eps} \\
    (A) \hspace{5.5cm} (B)\\
    \end{center}
    \vspace{-0.7cm}
@@ -532,11 +532,11 @@ i.e.} any pair of rings is unlinked).
 \begin{figure}[htp]
    \begin{center}
 \begin{tabular}{ccccc}
-      \includegraphics[width=2.5cm]{fig/link0.1.eps} &
-      \includegraphics[width=2.5cm]{fig/link3.1.eps} &
-      \includegraphics[width=2.5cm]{fig/link4.1.eps} &
-      \includegraphics[width=2.5cm]{fig/2rings.eps} &
-      \includegraphics[width=2.5cm]{fig/borromean.eps} \\
+      \includegraphics[width=2.5cm]{A.figs/link0.1.eps} &
+      \includegraphics[width=2.5cm]{A.figs/link3.1.eps} &
+      \includegraphics[width=2.5cm]{A.figs/link4.1.eps} &
+      \includegraphics[width=2.5cm]{A.figs/2rings.eps} &
+      \includegraphics[width=2.5cm]{A.figs/borromean.eps} \\
       (A) & (B) & (C) & (D) & (E) \\
 \end{tabular}
    \end{center}
@@ -560,11 +560,11 @@ continuous curve (top segment) and a broken curve (bottom segment).
 \begin{figure}[htp]
    \begin{center}
 \begin{tabular}{ccccc}
-      \includegraphics[width=2.5cm]{fig/link0.1d.eps} &
-      \includegraphics[width=2.5cm]{fig/link3.1d.eps} &
-      \includegraphics[width=2.5cm]{fig/link4.1d.eps} &
-      \includegraphics[width=2.5cm]{fig/2ringsd.eps}  &
-      \includegraphics[width=2.5cm]{fig/borromeand.eps} \\
+      \includegraphics[width=2.5cm]{A.figs/link0.1d.eps} &
+      \includegraphics[width=2.5cm]{A.figs/link3.1d.eps} &
+      \includegraphics[width=2.5cm]{A.figs/link4.1d.eps} &
+      \includegraphics[width=2.5cm]{A.figs/2ringsd.eps}  &
+      \includegraphics[width=2.5cm]{A.figs/borromeand.eps} \\
       (A) & (B) & (C) & (D) & (E) \\
 \end{tabular}
    \end{center}
@@ -588,7 +588,7 @@ undercrossing}) line in the top case and the {\it undercrossing}
 
 \begin{figure}[htp]
    \begin{center}
-   \includegraphics[width=10cm]{fig/linkdiagramelements.eps}
+   \includegraphics[width=10cm]{A.figs/linkdiagramelements.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Link diagram as plane graphs}
@@ -604,7 +604,7 @@ occurring on the 3-dimensional space. It is intuitive that we need
 no tearing.
 \begin{figure}[htp]
    \begin{center}
-   \includegraphics[width=10cm]{fig/exampleofambientisotopicknots.eps}
+   \includegraphics[width=10cm]{A.figs/exampleofambientisotopicknots.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Ambient isotopic knots}
@@ -622,7 +622,7 @@ Figure~\ref{fig:exampleOfAmbientIsotopicKnots} are equivalent, but
 are not equivalent to the trefoil.
 \begin{figure}[htp]
    \begin{center}
-   \includegraphics[width=15cm]{fig/reidemeistermoves.eps}
+   \includegraphics[width=15cm]{A.figs/reidemeistermoves.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Reidemeister moves}
@@ -680,7 +680,7 @@ if it sees the overcrossing line going right to left, the sign is
 -1.
 \begin{figure}[htp]
    \begin{center}
-   \includegraphics[width=9cm]{fig/orientedlinks.eps}
+   \includegraphics[width=9cm]{A.figs/orientedlinks.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Oriented links}
@@ -790,7 +790,7 @@ until they match. Note that adding these curls do not change the
 underlying link.
 \begin{figure}[htp]
    \begin{center}
-   \includegraphics[width=12cm]{fig/blackboardframedlink.eps}
+   \includegraphics[width=12cm]{A.figs/blackboardframedlink.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Aligning framing with writhe}
@@ -845,7 +845,7 @@ it in a different way.
 
 \begin{figure}[htp]
    \begin{center}
-   \includegraphics[width=7cm]{fig/unknotwithmeridian.eps}
+   \includegraphics[width=7cm]{A.figs/unknotwithmeridian.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Gluing a solid torus
@@ -865,7 +865,7 @@ fills the hole and leads to a connected, compact, oriented
 
 \begin{figure}[htp]
    \begin{center}
-   \includegraphics[width=9cm]{fig/surgery.eps}
+   \includegraphics[width=9cm]{A.figs/surgery.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Oriented links}
@@ -899,7 +899,7 @@ Kauffman's blackboard framed link formulation of Kirby's calculus
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=15cm]{fig/kauffmancalculus.eps}
+      \includegraphics[width=15cm]{A.figs/kauffmancalculus.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Kauffman's blackboard framed link formulation of Kirby's
@@ -946,7 +946,7 @@ $\IS^2 \times \IS^1$ (See \cite{Rolfsen1976}).
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=13cm]{fig/examplebflcalculus.eps}
+      \includegraphics[width=13cm]{A.figs/examplebflcalculus.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Example of BFL's inducing the same
@@ -964,7 +964,7 @@ simpler and equivalent calculus ${\cal K}^1$.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=8.5cm]{fig/ribbonmove.eps}
+      \includegraphics[width=8.5cm]{A.figs/ribbonmove.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ The {\it ribbon move} or $K_1$}
@@ -977,7 +977,7 @@ ${\cal K}^0$. But, before, we need a simple lemma.
 the pieces below are regular isotopic, so they induce the same
 space.
 \begin{center}
-      \includegraphics[width=8cm]{fig/whitneytrickresult.eps}
+      \includegraphics[width=8cm]{A.figs/whitneytrickresult.eps}
 \end{center}
  \label{lem:whitneytrick}
 \end{Lem}
@@ -988,7 +988,7 @@ space.
 obtained by combined reflections on the $x$ and $y$ axis of
 transformation
 \begin{center}
-\includegraphics[width=12cm]{fig/whitneytrickproof.eps}.
+\includegraphics[width=12cm]{A.figs/whitneytrickproof.eps}.
 \end{center}
 Note that each passage is a regular isotopy move in $\{K_2, K_3\}$.
 \end{proof}
@@ -1000,7 +1000,7 @@ $K_5$.
 
 \begin{proof} The following picture speaks by itself.
 \begin{center}
-\includegraphics{fig/ribbonmoveproof.eps}
+\includegraphics{A.figs/ribbonmoveproof.eps}
 \end{center}
 \vspace{-0.8cm}
 \end{proof}
@@ -1014,7 +1014,7 @@ and show some necessary results.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=13cm]{fig/somenotation.eps}
+      \includegraphics[width=13cm]{A.figs/somenotation.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Some notation}
@@ -1039,13 +1039,13 @@ we defined earlier.
 
 \begin{Lem} Regular isotopy leads to
 \begin{center}
-\includegraphics{fig/ncurland2pibox.eps}
+\includegraphics{A.figs/ncurland2pibox.eps}
 \end{center}
 \end{Lem}
 \begin{proof}
 Generalization of the following case where $n = 3$.
 \begin{center}
-\includegraphics[width=15cm]{fig/ncurland2piboxproof2.eps}
+\includegraphics[width=15cm]{A.figs/ncurland2piboxproof2.eps}
 \end{center}
 \vspace{-0.8cm}
 \end{proof}
@@ -1055,13 +1055,13 @@ Generalization of the following case where $n = 3$.
 configuration below with $2i^2$ crossings down to the right one with $2i$
 crossings. \label{lem:istranistrands}
 \begin{center}
-\includegraphics[width=9cm]{fig/istrandistrands.eps}
+\includegraphics[width=9cm]{A.figs/istrandistrands.eps}
 \end{center}
 \end{Lem}
 \begin{proof}
 This proof is taken from \cite{Kauffman1991}.
 \begin{center}
-\includegraphics[width=10cm]{fig/istrandistrandsproof.eps}
+\includegraphics[width=10cm]{A.figs/istrandistrandsproof.eps}
 \end{center}
 
 \vspace{-1cm}
@@ -1080,7 +1080,7 @@ passage number (3) is the application of Lemma
 \ref{lem:whitneytrick} (Whitney trick) on each strand. The rightmost
 image is the right side of move $K_5$, so the theorem is proved.
 \begin{center}
-\includegraphics[width=9cm]{fig/ribbonmoveimpliesk5proof.eps}
+\includegraphics[width=9cm]{A.figs/ribbonmoveimpliesk5proof.eps}
 \end{center}
 
 \vspace{-1cm}
@@ -1096,7 +1096,7 @@ transforming one BFL into the other.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12.5cm]{fig/bflcalculusk1.eps}
+      \includegraphics[width=12.5cm]{A.figs/bflcalculusk1.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ BFL calculus ${\cal K}^1$, obtained by replacing
@@ -1111,7 +1111,7 @@ We end this section with some results that are consequence of BFL calculus.
 \begin{Lem}[Passing Wall Lemma] These patterns are all regular isotopic
 
 \begin{center}
-\includegraphics{fig/passingwalllemma.eps}
+\includegraphics{A.figs/passingwalllemma.eps}
 \end{center}
 \end{Lem}
 \begin{proof}
@@ -1123,7 +1123,7 @@ the crossings of the white ball using the moves $K_2$ and $K_3$.
 \begin{Lem}[Passing Cross Lemma] \label{lem:passingCrossLemma} The first
 two and last two patterns are all regular isotopic
 \begin{center}
-\includegraphics{fig/passingcrosslemma.eps}
+\includegraphics{A.figs/passingcrosslemma.eps}
 \end{center}
 \end{Lem}
 \begin{proof} Follow the picture below. It proves that the first two
@@ -1134,14 +1134,14 @@ the regular isotopy basic move $K_3$ and rearrange its result on
 passage (4), arriving at the pattern wanted. The proof for the last
 two pattern is analogous to this one.
 \begin{center}
-\includegraphics{fig/passingcrosslemmaproof.eps}
+\includegraphics{A.figs/passingcrosslemmaproof.eps}
 \end{center}
 \end{proof}
 
 \begin{Lem}[Jumping Rope Lemma] \label{lem:jumpingRopeLemma}
 The following patterns induces the same space.
 \begin{center}
-\includegraphics{fig/jumpingropelemma.eps}
+\includegraphics{A.figs/jumpingropelemma.eps}
 \end{center}
 \end{Lem}
 \begin{proof} Follow the picture below. It proves that the first two
@@ -1156,7 +1156,7 @@ passage (6). We have thus proved that the first two patterns of this
 lemma indeed induce the same space. From these steps it is clear how
 the last pattern of this lemma is also proved to induce the same.
 \begin{center}
-\includegraphics{fig/jumpingropelemmaproof.eps}
+\includegraphics{A.figs/jumpingropelemmaproof.eps}
 \end{center}
 \vspace{-0.8cm}
 \end{proof}
