--- a/chapter3.tex
+++ b/chapter3.tex
@@ -10,7 +10,7 @@ to build a new object from a blackboard framed link.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12.5cm]{fig/bfl2blink.eps}\\
+      \includegraphics[width=12.5cm]{A.figs/bfl2blink.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{Procedure \textsc{BFL2Blink}}
@@ -67,7 +67,7 @@ blink on Figure~{\ref{fig:BFL2Blink}F} are associated.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=9cm]{fig/blinksplaneisotopy.eps}
+      \includegraphics[width=9cm]{A.figs/blinksplaneisotopy.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Blinks}
@@ -160,7 +160,7 @@ is one of the ones displayed in Figure
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=10cm]{fig/blinkcalculusoncoins.eps}
+      \includegraphics[width=10cm]{A.figs/blinkcalculusoncoins.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Blink formal calculus by local coins replacements}
@@ -207,7 +207,7 @@ For $n >1$, $\mu_n$ is defined by Figure \ref{fig:mun}.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=10cm]{fig/mun.eps}
+      \includegraphics[width=10cm]{A.figs/mun.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Definition of $\mu_n$, $n \geq 2$.}
@@ -218,7 +218,7 @@ For $n >1$, $\mu_n$ is defined by Figure \ref{fig:mun}.
 move depicted below is obtained regular isotopies, and a single
 ribbon move.
 \begin{center}
-\includegraphics[width=6cm]{fig/heartsmoothing.eps}
+\includegraphics[width=6cm]{A.figs/heartsmoothing.eps}
 \end{center}
 \end{Lem}
 \begin{proof}Follow the proof in the figure below. The ribbon move
@@ -226,7 +226,7 @@ is used in the second configuration to prepare for the application
 of Whitney´s trick. After this is done we obtain the third
 configuration. All other moves are regular isotopies.
 \begin{center}
-\includegraphics[width=12cm]{fig/heartsmoothingproof.eps}
+\includegraphics[width=12cm]{A.figs/heartsmoothingproof.eps}
 \end{center}
 \vspace{-0.8cm}
 \end{proof}
@@ -238,7 +238,7 @@ generalizes $\mu_n$, depicted in Fig. \ref{fig:muNproof}.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=9cm]{fig/munproof.eps}
+      \includegraphics[width=9cm]{A.figs/munproof.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Moves that generalize $\mu_n$.}
@@ -274,7 +274,7 @@ as can be seen on the Figure below, we can apply the induction
 hypothesis on the internal $n-1$ strands of the curl and then apply
 the $\mu_n$, thus obtaining $\alpha_n$.
 \begin{center}
-\includegraphics[width=12cm]{fig/munimpliesalphanproof.eps}
+\includegraphics[width=12cm]{A.figs/munimpliesalphanproof.eps}
 \end{center}
 \end{proof}
 
@@ -291,7 +291,7 @@ the schema on Figure \ref{fig:MuNLinha}.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=10cm]{fig/munlinha.eps}
+      \includegraphics[width=10cm]{A.figs/munlinha.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{The axiom $\mu'_n$ ($n \geq 2$) : ``better'' blink translation than $\mu_n$}
@@ -314,7 +314,7 @@ these transformations are both ways, we have proved the case for
 $n=2$. The proof for $n>2$ is analogous to the $n=2$ case and will
 not be shown.
 \begin{center}
-\includegraphics[width=13cm]{fig/munlinhaimpliesmunproof.eps}
+\includegraphics[width=13cm]{A.figs/munlinhaimpliesmunproof.eps}
 \end{center}
 \vspace{-1cm}
 \end{proof}
@@ -332,17 +332,17 @@ The translation from $\K$ into $\B$ is depicted in Figure~\ref{fig:translationBF
 \begin{footnotesize}
 \begin{tabular}{|c|c|} \hline
 \rule{0cm}{2.7cm}
-\includegraphics[width=5cm]{fig/translationk0.eps} &
-\includegraphics[width=5cm]{fig/translationribbonmove.eps} \\
+\includegraphics[width=5cm]{A.figs/translationk0.eps} &
+\includegraphics[width=5cm]{A.figs/translationribbonmove.eps} \\
 Translation of $K_0$ into $B_0$ &
 Translation of the ribbon move $K_1$ into $B_1$ \\ \hline
 \rule{0cm}{2.7cm}
-\includegraphics[width=5cm]{fig/translationk2.eps} &
-\includegraphics[width=5cm]{fig/translationk3.eps} \\
+\includegraphics[width=5cm]{A.figs/translationk2.eps} &
+\includegraphics[width=5cm]{A.figs/translationk3.eps} \\
 Translation of $K_2$ into $B_2$ &
 Translation of $K_3$ into $B_3$ \\ \hline
 \multicolumn{2}{|c|}{
-      \rule{0cm}{7.4cm} \includegraphics[width=9cm]{fig/munlinhatranslation2.eps}
+      \rule{0cm}{7.4cm} \includegraphics[width=9cm]{A.figs/munlinhatranslation2.eps}
 } \\
 \multicolumn{2}{|c|}{
       Translation of $\mu'_1, \ldots, \mu'_5, \ldots$,
@@ -393,7 +393,7 @@ $G_B$ (Figure \ref{fig:gblinkFromBlinkElements}D).
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics{fig/gblinkfromblinkelements.eps}\\
+      \includegraphics{A.figs/gblinkfromblinkelements.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{Elements on the definition of a g-blink from a blink}
@@ -418,7 +418,7 @@ vertex-edge, face-edge, angle-edge and zigzag-edge respectively.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=14cm]{fig/blink2gblinkexample.eps}\\
+      \includegraphics[width=14cm]{A.figs/blink2gblinkexample.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{Blink, g-blink and attributes: an example}
@@ -493,7 +493,7 @@ edges is a planar graph (see Figure \ref{fig:gBlinkWithoutZigzags}).
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=6cm]{fig/gblinkwithoutzigzags.eps}\\
+      \includegraphics[width=6cm]{A.figs/gblinkwithoutzigzags.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{g-blink of Figure \ref{fig:Blink2GBlinkExample}L without zigzag-edges: a planar graph}
@@ -533,7 +533,7 @@ is the neighbor of who, their curve shape is not important).
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/differentblinkssamegblink.eps}\\
+      \includegraphics[width=12cm]{A.figs/differentblinkssamegblink.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{Different blinks with the same g-blink}
@@ -575,7 +575,7 @@ the sphere.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=11cm]{fig/sphereisotopy.eps}
+      \includegraphics[width=11cm]{A.figs/sphereisotopy.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Isotopy on the sphere $\IS^2$}
@@ -596,7 +596,7 @@ Figure~\ref{fig:DifferentBlinksSameGBlink}D induce the same space.
 \begin{Lem}[Blink Jumping Rope Lemma] \label{lem:BlinkJumpingRopeLemma}
 The (meta-)blinks shown below induce the same space.
     \begin{center}
-        \includegraphics[width=5cm]{fig/blinkjumpingropelemma.eps}
+        \includegraphics[width=5cm]{A.figs/blinkjumpingropelemma.eps}
     \end{center}
 \end{Lem}
 \begin{proof} Follow the figure below. First we show the BFL
@@ -606,7 +606,7 @@ edge). Then we apply the Jumping Rope Lemma
 our target blink. As our moves preserve the space, we have the
 result.
     \begin{center}
-        \includegraphics[width=14cm]{fig/blinkjumpingropelemmaproof.eps}
+        \includegraphics[width=14cm]{A.figs/blinkjumpingropelemmaproof.eps}
     \end{center}
 \vspace{-1cm}
 \end{proof}
@@ -690,7 +690,7 @@ to $v$ by a vertex-edge then $s_a=+1$
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=8cm]{fig/linkingmatrix.eps}
+      \includegraphics[width=8cm]{A.figs/linkingmatrix.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Signs of a g-edge $a$ for the linking matrix}
@@ -773,7 +773,7 @@ $$ \theta(a,b,c) = \left\{%
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics{fig/qialphabeta.eps}
+      \includegraphics{A.figs/qialphabeta.eps}
    \end{center}
    \caption{ Elements for the quantum invariant}
    \label{fig:qialphabeta}
@@ -840,7 +840,7 @@ verdes pendentes saindo de dois vértices diferentes. Em
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      %\includegraphics{fig/blinkgraphlbl.\jpgext}
+      %\includegraphics{A.figs/blinkgraphlbl.\jpgext}
 
 \begin{footnotesize}
 \begin{tabular}{|rrclr|} \hline
@@ -906,7 +906,7 @@ and that every integer appears is rather pleasing.
     %\vspace{0.5cm}
     \begin{figure}[h!]
         \begin{center}
-            \includegraphics[width=4cm]{fig/strange.eps}
+            \includegraphics[width=4cm]{A.figs/strange.eps}
         \end{center}
         \caption{A peculiar space: its quantum invariants are integers and every integer appears}
         \label{fig:strange}
@@ -987,7 +987,7 @@ labeling, we denote by $\pack(L)$ the packed representation of $L$.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics{fig/gblinklabeling.eps}
+      \includegraphics{A.figs/gblinklabeling.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ blink $B$, g-blink $G_B$ and labeling $\textsc{GBlinkLabel}(G_B,v)$}
@@ -1122,7 +1122,7 @@ that crosses a green edge is itself a green edge).
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=10cm]{fig/blinkwith8operations.eps}
+      \includegraphics[width=10cm]{A.figs/blinkwith8operations.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{The effect on blinks of applying all combinations of (C), (P)
@@ -1166,7 +1166,7 @@ $G \Sequiv \textsc{Dual}(G)$.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=13cm]{fig/dualgblinksinducesamespace.eps}
+      \includegraphics[width=13cm]{A.figs/dualgblinksinducesamespace.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Dual g-blinks induce the same space}
@@ -1216,34 +1216,34 @@ orientation that is changed.
 \begin{tabular}{|ccc|} \hline
 \multicolumn{3}{|c|}{\textsc{Dual($G$)}} \\
 g-blink & blink & BFL \\ \hline
-\multicolumn{1}{|p{4.5cm}|}{\protect \centering change parity (P) and swap face-edges and vertex-edges (FV) \\[0.3cm] \includegraphics{fig/smallgblinkdual.eps}} &
+\multicolumn{1}{|p{4.5cm}|}{\protect \centering change parity (P) and swap face-edges and vertex-edges (FV) \\[0.3cm] \includegraphics{A.figs/smallgblinkdual.eps}} &
 \multicolumn{1}{|p{4.5cm}|}{\protect \centering each face becomes a
 vertex, each
-edge becomes a dual edge with different color \\[0.3cm] \includegraphics{fig/smallblinkdual.eps}} &
-\multicolumn{1}{|p{4.5cm}|}{\protect \centering overpass one external edge \\[0.3cm] \includegraphics{fig/smallbfldual.eps}} \\ \hline
+edge becomes a dual edge with different color \\[0.3cm] \includegraphics{A.figs/smallblinkdual.eps}} &
+\multicolumn{1}{|p{4.5cm}|}{\protect \centering overpass one external edge \\[0.3cm] \includegraphics{A.figs/smallbfldual.eps}} \\ \hline
 \multicolumn{3}{|c|}{\textsc{Reflection($G$)}} \\[0.1cm]
 g-blink & blink & BFL \\ \hline \multicolumn{1}{|p{4.5cm}|}{\protect
 \centering change parity (P) and change overcross and undercross
 status on zigzag-edges (C) \\[0.3cm]
-\includegraphics{fig/smallgblinkreflection.eps}}  &
+\includegraphics{A.figs/smallgblinkreflection.eps}}  &
 \multicolumn{1}{|p{4.5cm}|}{\protect \centering
-reflect \\[0.3cm] \includegraphics{fig/smallblinkreflection.eps}} &
+reflect \\[0.3cm] \includegraphics{A.figs/smallblinkreflection.eps}} &
 \multicolumn{1}{|p{4.5cm}|}{\protect \centering
 reflect and change the crossings  \\[0.3cm]
-\includegraphics{fig/smallbflreflection.eps}} \\ \hline
+\includegraphics{A.figs/smallbflreflection.eps}} \\ \hline
 \multicolumn{3}{|c|}{\textsc{RefDual($G$)}} \\
 g-blink & blink & BFL \\ \hline \multicolumn{1}{|p{4.5cm}|}{\protect
 \centering change overcross and undercross
 status on zigzag-edges (C) and swap face-edges and vertex-edges (FV) \\[0.3cm]
-\includegraphics{fig/smallgblinkrefdual.eps}} &
+\includegraphics{A.figs/smallgblinkrefdual.eps}} &
 \multicolumn{1}{|p{4.5cm}|}{\protect \centering first make each face
 become a vertex and each
 edge become a dual edge with the color changed, then reflect
 the result \\[0.3cm]
-\includegraphics{fig/smallblinkrefdual.eps}} &
+\includegraphics{A.figs/smallblinkrefdual.eps}} &
 \multicolumn{1}{|p{4.5cm}|}{\protect \centering overpass one
 external edge, reflect and change the crossings \\[0.2cm]
-\includegraphics{fig/smallbflrefdual.eps}} \\[0.3cm] \hline
+\includegraphics{A.figs/smallbflrefdual.eps}} \\[0.3cm] \hline
 \end{tabular} \bigskip \medskip}}
 
 One important consequence of the properties we described here is that we
@@ -1272,7 +1272,7 @@ See Figure~\ref{fig:merging} for an example.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=14cm]{fig/merging.eps}
+      \includegraphics[width=14cm]{A.figs/merging.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Merging of $A$ and $B$ on {\it basepair} $(a,b)$}
@@ -1299,7 +1299,7 @@ In the language of BFLs the diagrammatic reformulation of Theorem
 \ref{theo:partialDual} is given by the diagram below. Note that
 $\alpha$ and $\beta$ are the ends of $a$ and $\gamma$ and $\delta$
 are the ends of $b$.
-$$\includegraphics[width=5cm]{fig/partialdual.eps}$$ The right
+$$\includegraphics[width=5cm]{A.figs/partialdual.eps}$$ The right
 diagram above is obtained by cutting the two wires $\pi$-rotating
 $B$ and reconnecting the wires. (Note that the smiling fellow has
 only the right rear.) Theorem~\ref{theo:partialDual} was suggested by
@@ -1320,7 +1320,7 @@ In the language of blinks the diagrammatic reformulation of Theorem
 below. The right part of it is the reformulation of the same Theorem
 in BFL language. Note that the right ear becomes a left ear
 indicating a $B$-reflection.
-$$\includegraphics[width=10cm]{fig/partialreflection.eps}$$
+$$\includegraphics[width=10cm]{A.figs/partialreflection.eps}$$
 Theorem \ref{theo:partialReflection} is proved by topological
 techniques allied to crucial facts on the theory of gems. It is done
 in Chapter 4. The proof of Theorem \ref{theo:partialReflection} is
@@ -1329,7 +1329,7 @@ the main theoretical contribution of this thesis.
 The diagrammatic reformulation of Theorem
 \ref{theo:partialRefDual} in the language of BFLs is the passage
 from the first to the third diagram below
-$$\includegraphics[width=8cm]{fig/partialrefdual.eps}$$ The third
+$$\includegraphics[width=8cm]{A.figs/partialrefdual.eps}$$ The third
 diagram above is obtained by a $3D$-flip on $B$ (getting the central
 diagram) followed by a ribbon move, regular isotopies and Whitney
 trick. The smiling to frowning change is to indicate that all the
@@ -1360,7 +1360,7 @@ cancel each other.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=8cm]{fig/smilingfrowningfellow2.eps}
+      \includegraphics[width=8cm]{A.figs/smilingfrowningfellow2.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{BFLs induce same space because are the same link with the same
@@ -1430,7 +1430,7 @@ the final blocks are always the same.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=14cm]{fig/breakpoint.eps}
+      \includegraphics[width=14cm]{A.figs/breakpoint.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Breakpoints of a g-blink and its breaking}
@@ -1471,7 +1471,7 @@ connecting the two g-blinks and respecting the parity.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=14cm]{fig/mergingwithdual.eps}
+      \includegraphics[width=14cm]{A.figs/mergingwithdual.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Merging A with B and with \textsc{Dual}(B)}
@@ -1512,7 +1512,7 @@ Figure~\ref{fig:mergingOnAnyAngleEdge}A.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/mergingonanyangleedge.eps}
+      \includegraphics[width=12cm]{A.figs/mergingonanyangleedge.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Merging on any angle-edge of the same g-zigzags}
@@ -1690,7 +1690,7 @@ implemented for obtaining the representative of a g-blink (or blink).
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/dog.eps}
+      \includegraphics[width=12cm]{A.figs/dog.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{Representative of the dog like blink}
