--- a/chapter4.tex
+++ b/chapter4.tex
@@ -74,7 +74,7 @@ Figure~\ref{fig:tsmoves}.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics{fig/tsmoves.eps}\\
+      \includegraphics{A.figs/tsmoves.eps}\\
    \end{center}
    \vspace{-0.7cm}
    \caption{The six TS-moves}
@@ -101,7 +101,7 @@ have been so far sufficient to classify gems up to 30 vertices.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=10cm]{fig/umove.eps}\\
+      \includegraphics[width=10cm]{A.figs/umove.eps}\\
    \end{center}
    \vspace{-0.7cm}
 
@@ -128,7 +128,7 @@ begin by proving a result which simplifies considerably the passage
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=10cm]{fig/the-12-8-move.eps}\\
+      \includegraphics[width=10cm]{A.figs/the-12-8-move.eps}\\
    \end{center}
    \vspace{-0.7cm}
    \caption{Simplifying the gem of a blink: from 12 to 8 vertices by crossing}
@@ -166,7 +166,7 @@ its switched form. The {\em octagon} of a crossing corresponds to an
 unidentified crossing. This is indicated by light green edges in the
 place of the normal green ones.
 \begin{center}
-      \includegraphics[width=10cm]{fig/thetwocrossings.eps}
+      \includegraphics[width=10cm]{A.figs/thetwocrossings.eps}
 \end{center}
 
 In Figure \ref{fig:poincareGemBlink} we display a complete example
@@ -184,7 +184,7 @@ underpasses.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=15cm]{fig/poincaregemblink.eps}
+      \includegraphics[width=15cm]{A.figs/poincaregemblink.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Obtaining the canonical gems $J^\downarrow(B)$ and
@@ -242,7 +242,7 @@ vertices $r$ and $s$ of gem $J$ are in $\C_e \times [0,\epsilon]$.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/cylinderinedge.eps}
+      \includegraphics[width=12cm]{A.figs/cylinderinedge.eps}
    \end{center}
    \vspace{-0.7cm}
   \caption{Some cylinders induced in $K(B)$ by a directed
@@ -258,7 +258,7 @@ vertex $v$ of $G$ we define two vertices $v_i$ and $v_o$ in $j$.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics{fig/gblink2gem.eps}
+      \includegraphics{A.figs/gblink2gem.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ Scheme to define a 3-gem from a g-blink}
@@ -328,7 +328,7 @@ complete example of a g-blink and the 3-gem defined by
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=9cm]{fig/gblinkandgem.eps}
+      \includegraphics[width=9cm]{A.figs/gblinkandgem.eps}
    \end{center}
    \vspace{-0.7cm}
    \caption{ g-blink $G$ and its reduced canonical
@@ -346,7 +346,7 @@ $2$-torus $T^2_{ef}$.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=14cm]{fig/breakpairandtorus.eps}\\
+      \includegraphics[width=14cm]{A.figs/breakpairandtorus.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{$1-1$ correspondence: breakpair $\{e,f\}$
@@ -425,7 +425,7 @@ $\widetilde{F}$ is shown in Figure~\ref{fig:filme}.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=15cm]{fig/filme.eps}\\
+      \includegraphics[width=15cm]{A.figs/filme.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{The action of $\mu$ on the fundamental domain
@@ -438,7 +438,7 @@ We are now ready to prove Theorem~\ref{theo:partialReflection}
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=15cm]{fig/inthreeparts.eps}\\
+      \includegraphics[width=15cm]{A.figs/inthreeparts.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{For the proof of the Partial Reflection Theorem:
@@ -506,7 +506,7 @@ torus, thus completing the proof.
 \begin{figure}[htp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=12cm]{fig/spacetoroidalboundary.eps}\\
+      \includegraphics[width=12cm]{A.figs/spacetoroidalboundary.eps}\\
    \end{center}
    \vspace{-0.7cm}
   \caption{Space $|H|$, $\partial(|H|)=T^2_{ef}$, canonical way
