--- a/slides.tex
+++ b/slides.tex
@@ -108,7 +108,7 @@ of the same space. }
 {\em red} or {\em green}}.\end{center}
 
    \begin{center}
-      \includegraphics[width=10cm]{fig/blinkExamples.eps}
+      \includegraphics[width=10cm]{A.figs/blinkExamples.eps}
    \end{center}
    The {\em size of a blink} is its number of edges.}
 
