alterei a altura das páginas do apêndice para 23.5 cm

--- a/appendix3.tex
+++ b/appendix3.tex
@@ -33,7 +33,7 @@ Are the 11 uncertainties examples of non-trivial pairs?
    \hspace{-1.8cm}
    \enlargethispage{5cm}
    {\centering
-   \includegraphics[width=18cm]{A.figs/con3catalog\ifnum\ii<100 0\fi\ifnum\ii<10 0\fi\number\ii.eps}
+   \includegraphics[height=23.5cm]{A.figs/con3catalog\ifnum\ii<100 0\fi\ifnum\ii<10 0\fi\number\ii.eps}
    }
    \newpage}
       \advance\ii by 1
