I put the census-figure with labels in the main document (page 59)

--- a/chapter5.tex
+++ b/chapter5.tex
@@ -703,10 +703,10 @@ at most $n$ edges.
    \begin{center}
       \leavevmode
       %\includegraphics[width=14.5cm]{A.figs/primeSpace487Representants.eps}
-      \includegraphics[width=16cm]{E.figsbw2/primespace487representants_bw.pdf}
+      \includegraphics[height=22.5cm]{E.figsbw2/primespace487representants_bw.pdf}
    \end{center}
    \vspace{-0.7cm}
-   \caption{A complete census of 9-small closed oriented 3-manifolds, still with two uncertainties}
+   \caption{A complete census of 9-small closed oriented 3-manifolds}
    \label{fig:primeSpace487Representatives}
 \end{figure}
 
@@ -715,7 +715,7 @@ at most $n$ edges.
 \begin{figure}[h!tp]
    \begin{center}
       \leavevmode
-      \includegraphics[width=16cm]{E.figsbw2/primespace487representantlinks_bw.pdf}
+      \includegraphics[height=22.0cm]{E.figsbw2/primespace487representantlinks_bw.pdf}
    \end{center}
    \vspace{-0.7cm}
    \caption{Corresponding links for the census of 9-small 3-manifolds, still with two doubts}
