put labels in the blackboard framed links

--- a/chapter5.tex
+++ b/chapter5.tex
@@ -706,7 +706,7 @@ at most $n$ edges.
       \includegraphics[height=22.5cm]{E.figsbw2/primespace487representants_bw.pdf}
    \end{center}
    \vspace{-0.7cm}
-   \caption{A complete census of 9-small closed oriented 3-manifolds}
+   \caption{A complete topological census of 9-small closed oriented 3-manifolds}
    \label{fig:primeSpace487Representatives}
 \end{figure}
 
@@ -718,7 +718,7 @@ at most $n$ edges.
       \includegraphics[height=22.0cm]{E.figsbw2/primespace487representantlinks_bw.pdf}
    \end{center}
    \vspace{-0.7cm}
-   \caption{Corresponding links for the census of 9-small 3-manifolds, still with two doubts}
+   \caption{Corresponding links for the topological census of 9-small 3-manifolds}
    \label{fig:primeSpace487RepresentativeLinks}
 \end{figure}
 
